<resources>
    <string name="app_name">Mealer</string>
    <string name="radioBtnChef">Chef</string>
    <string name="radioBtnClient">Client</string>
    <string name="btn_REGISTER">REGISTER</string>
    <string name="btn_LOGIN">LOGIN</string>
    <string name="editText_Password" />
    <string name="TextView_DontHaveAnAccount">Don\'t have an account? Click Here to Register!</string>
    <string name="TextView_AlreadyAUser">Already a User? Enter your Credentials and Click Login!</string>
    <string name="TextView_MealerTitle">MEALER</string>
    <string name="TextView_WelcomToMealer">Welcome to the Best Food App....</string>
    <string name="TextView_RegistrationCredentials">Enter your Email and Password Below</string>
    <string name="TextView_OrderingFood">(Ordering Food)</string>
    <string name="TextView_MakingFood">(Making Food)</string>
    <string name="TextView_EnterRegistrationCredentials">Please Enter your Information for the Following Fields</string>
    <string name="TextView_ClickHereCreateAccount">Click Here to Create your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="how_will_you_be_using_mealer">How will you be using Mealer?</string>
    <string name="h">h</string>
    <string name="name">Name</string>
    <string name="email_username">Email/Username</string>
    <string name="Password">Password</string>
    <string name="credit_card">Credit Card</string>
    <string name="payment_information">Payment Information</string>
    <string name="logout">LOGOUT</string>
    <string name="welcome_administrator_you_re_in_charge">Welcome Administrator! You\'re in Charge!</string>
    <string name="welcome_to_mealer_chef_name">Welcome to Mealer, Chef [Name]</string>
    <string name="chef_description">Chef Description</string>
    <string name="manage_users">Manage Users</string>
    <string name="manage_complaints">Manage Complaints</string>
    <string name="click_here_to_manage_the_complaints">Click Here to Manage the Complaints</string>
    <string name="click_here_to_manage_users">Click Here to Manage Users</string>
    <string name="currently_no_chef_complaints">Currently no Chef complaints</string>
    <string name="you_have_new_complaints_what_is_your_decision">You have new complaints.What is your decision</string>
    <string name="manage_suspension">Manage Suspension</string>
    <string name="you_are_in_charge">You are in charge.</string>
    <string name="hi_admin_welcome_back">Hi,Admin! Welcome back</string>
    <string name="todo">TODO</string>
    <string name="daily_activities">Daily activities</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>